--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -13,8 +13,8 @@ body {
   color: $fg-color;
   background-color: $bg-color;
 	font-family: $text-font-family;
-	font-size: 1.6em;
-	font-weight: 300;
+	font-size: 1.8em;
+	font-weight: normal;
   line-height: 1.8em;
   @media only screen and (max-width : 768px) {
     font-size: 1.6em;
