--- a/themes/hugo-coder/assets/scss/_variables.scss
+++ b/themes/hugo-coder/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 // Fonts
-$text-font-family: Merriweather, Georgia, serif;
+// $text-font-family: Merriweather, Georgia, serif;
+$text-font-family: Source Serif Pro, serif;
 $heading-font-family: Lato, Helvetica, sans-serif;
 $code-font-family: 'Source Code Pro', 'Lucida Console', monospace;
 
