--- a/themes/hugo-coder/assets/scss/_content.scss
+++ b/themes/hugo-coder/assets/scss/_content.scss
@@ -4,6 +4,7 @@
   margin-top: 1.6rem;
   margin-bottom: 3.2rem;
   article {
+    max-width: 70.0rem;  
     header {
       margin-top: 6.4rem;
       margin-bottom: 3.2rem;
