--- a/themes/hugo-coder/assets/scss/_content.scss
+++ b/themes/hugo-coder/assets/scss/_content.scss
@@ -5,6 +5,7 @@
   margin-bottom: 3.2rem;
   article {
     max-width: 70.0rem;  
+    margin: 0 auto;
     header {
       margin-top: 6.4rem;
       margin-bottom: 3.2rem;
